@@ -1,3 +1,8 @@
+Fri Sep 19 10:55:29 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/searchconnection.py: Add checks to ensure that weighting
+	  parameters are in the allowed ranges.
+
 Thu Sep 18 00:55:28 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/searchconnection.py: Allow getting a document based on
